--- a/index.html
+++ b/index.html
@@ -1,12 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./Css/style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header_wrapper">
+          <div class="header_content">
+            <ul class="header_ul">
+              <li class="item">
+                <a class="iteam" href=""
+                  ><img src="./img/Link → SVG.png" alt="" />+ 998 (71)
+                  249-15-90</a
+                >
+              </li>
+              <li class="item">
+                <a class="iteam" href=""
+                  ><img
+                    src="./img/Link → SVG.png"
+                    alt=""
+                  />medicalexp@gmail.com</a
+                >
+              </li>
+              <li class="item">
+                <a class="iteam" href=""
+                  ><img src="./img/Link → SVG.png" alt="" />Toshkent sh,
+                  Shayxontour tumani, Beruniy shoh ko‘chasi, 32-uy</a
+                >
+              </li>
+              <li class="item">
+                <a class="iteam" href=""
+                  ><img src="img/Link → SVG.png" alt="" />
+                  <img src="img/Link → SVG.png" alt="" />
+                  <img src="img/Link → SVG.png" alt="" />
+                  <img src="img/Link → SVG.png" alt=""
+                /></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+    <header class="header_2">
+      <div class="container">
+        <div class="header_2_wrapper">
+          <div class="header_2_content">
+            <img src="./img/Button.png" alt="" />
+          </div>
+          <div class="header_2_content">
+            <ul class="header_2_ul">
+              <li class="li"><a class="a" href="">Biz haqimizda</a></li>
+              <li class="li"><a class="a" href="">Xizmatlarimiz</a></li>
+              <li class="li"><a class="a" href="">Shifokorlar</a></li>
+              <li class="li"><a class="a" href="">Yangiliklar</a></li>
+              <li class="li"><a class="a" href="">Kontaktlar</a></li>
+            </ul>
+          </div>
+          <div class="header_2_content">
+            <button class="btn">UZ</button>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main class="main">
+      <section class="hero">
+        <div class="container">
+          <div class="hero_wrapper">
+            <div class="hero_content">
+              <p class="p-1">Kosmetologiya</p>
+              <p class="p-2">
+                Yoshga bog'liq o'zgarishlar, ajinlar, pigmentatsiya, akne,
+                o'rgimchak tomirlariBu zamonaviy kosmetologiya uchun endi muammo
+                emas.Kosmetolog maslahatiga yoziling.Uskuna va in'ektsiya
+                usullari.Faqat xavfsiz preparatlar va mahsulotlarSizni kutamiz!
+              </p>
+              <button class="btn-1">Uchrashuv belgilash</button>
+              <button class="btn-2">Batafsil ma'lumot</button>
+            </div>
+            <div class="hero_content">
+              <img
+                src="./img/d5b4ce333524b5a8e16bb1a2d567e368.jpg.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="nimadi">
+        <div class="container">
+          <div class="nimadi_wrapper">
+            <div class="nimadi_content">
+              <img src="./img/SVG.png" alt="" />
+              <p class="color-1">25</p>
+              <p class="color">Bemor xonalari</p>
+            </div>
+            <div class="nimadi_content">
+              <img src="./img/Vector.png" alt="" />
+              <p class="color-1">25000+</p>
+              <p class="color">Baxtli bemorlar</p>
+            </div>
+            <div class="nimadi_content">
+              <img src="./img/Group.png" alt="" />
+              <p class="color-1">750</p>
+              <p class="color">Shifokorlar va hamshiralar</p>
+            </div>
+            <div class="nimadi_content">
+              <img src="./Vector.png" alt="" />
+              <p class="color-1">6</p>
+              <p class="color">Bir yillik tajriba</p>
+            </div>
+            <div class="nimadi_content">
+              <img src="./SVG.png" alt="" />
+              <p class="color-1">2</p>
+              <p class="color">Filial</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Xizmatlar -->
+      <section class="services-section">
+        <div class="boxxx">
+          <h2>Bizning shifoxona xizmatlarimiz</h2>
+          <button class="sasal">Barcha xizmatlar</button>
+        </div>
+
+        <div class="cards">
+          <div class="card">
+            <img src="./img/image.png" alt="Plastik jarrohlik" />
+            <h3>Plastik jarrohlik</h3>
+            <p>
+              Expert Medical klinikasida plastik jarrohlik Xususiy klinikamiz
+              jarrohlik va plastik jarrohlik sohasida katta yillik tajribaga
+              ega. Biz rinoplastika, liposaktsiya, yuz va tanani liftingi kabi
+              keng k…
+            </p>
+          </div>
+          <div class="card">
+            <img src="./image.png" alt="UTT" />
+            <h3>UTT</h3>
+            <p>
+              Toshkent shahridagi yuqori sifatli ultratovush tekshiruvi xizmati
+              Toshkent shahrida joylashgan Expert Medical xususiy klinika keng
+              ko‘lamli tibbiy xizmatlarni, jumladan, ultratovush tekshiruvini
+              ham…
+            </p>
+          </div>
+          <div class="card">
+            <img src="./image.png" alt="Endokrinologiya" />
+            <h3>Endokrinologiya</h3>
+            <p class="mini">
+              Toshkent shahridan tajribali endokrinolog yoki endokrinologiya
+              sohasiga mo‘ljalangan xizmatlar kerakmi? Bu juda ham oson! Biz
+              bilan roʻyxatdan oʻting.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Video bo'lim -->
+      <section class="video-section">
+        <h2 class="niger">
+          Toshkent shahridagi eng yaxshi xususiy klinika Expert Medical ga xush
+          kelibsiz!
+        </h2>
+
+        <img src="./img/Section → poster.fd8ce605.jpg.png" alt="" />
+      </section>
+
+      <!-- Mutaxassislar -->
+      <section class="experts-section">
+        <div class="boxxx">
+          <h2>Bizning mutaxassislarimiz</h2>
+          <button class="sasal">Barcha mutaxassislar</button>
+        </div>
+
+        <div class="experts">
+          <div class="expert">
+            <img src="./img/image.png" alt="Ortiqov Aziz" />
+            <h3>Ortiqov Aziz</h3>
+            <p>Dermatolog</p>
+          </div>
+          <div class="expert">
+            <img src="./img/image.png" alt="Safaeva Shirinxon" />
+            <h3>Safaeva Shirinxon</h3>
+            <p>Ginekolog</p>
+          </div>
+          <div class="expert">
+            <img src="./img/image.png" alt="Marupova Iroda" />
+            <h3>Marupova Iroda</h3>
+            <p>Endokrinolog</p>
+          </div>
+          <div class="expert">
+            <img src="./img/image.png" alt="Marupova Iroda" />
+            <h3>Marupova Iroda</h3>
+            <p>Endokrinolog</p>
+          </div>
+        </div>
+      </section>
+      <section class="select__medic">
+        <div class="container">
+          <h2 class="select__title">
+            <span class="border">Nega</span> bizni tanlaysiz?
+          </h2>
+          <ul class="select__menu">
+            <li class="select__list">
+              <h2 class="select__list__title">Biz haqimizda</h2>
+              <p class="select__list__text">
+                «Expert Medical Clinic» tibbiyot markazimiz keng ko‘lamli tibbiy
+                xizmatlar, jumladan, umumiy tibbiy yordam, mutaxassislar
+                maslahati, diagnostika, laboratoriya tekshiruvlari, zarur
+                hollarda jarrohlik yoli bilan davolashda yetakchi hisoblanadi.
+              </p>
+            </li>
+            <li class="select__list">
+              <h2 class="select__list__title">
+                Nega aynan bizni tanlashingiz kerak?
+              </h2>
+              <p class="select__list__text">
+                Bizning jamoamiz – Toshkentning ko‘p yillik tajribaga ega, o‘z
+                ishinig ustasi va sizga 24/7 yordam berishga tayyor
+                shifokorlardan iborat
+              </p>
+            </li>
+            <li class="select__list">
+              <h2 class="select__list__title">Biz haqimizda</h2>
+              <p class="select__list__text">
+                «Expert Medical Clinic» tibbiyot markazimiz keng ko‘lamli tibbiy
+                xizmatlar, jumladan, umumiy tibbiy yordam, mutaxassislar
+                maslahati, diagnostika, laboratoriya tekshiruvlari, zarur
+                hollarda jarrohlik yoli bilan davolashda yetakchi hisoblanadi.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
