--- a/tafsilot.html
+++ b/tafsilot.html
@@ -12,10 +12,10 @@
             <div class="header__wrapper">
                 <img src="./img/Button.png" alt="" class="header__img">
                 <ul class="header__menu">
-                    <li class="header__list"><a href="" class="header__link">Biz Haqimizda</a></li>
+                    <li class="header__list"><a href="index.html" class="header__link">Biz Haqimizda</a></li>
                     <li class="header__list"><a href="" class="header__link">Xizmatlarimiz</a></li>
                     <li class="header__list"><a href="" class="header__link">Shifokorlar</a></li>
-                    <li class="header__list"><a href="" class="header__link">Yangiliklar</a></li>
+                    <li class="header__list"><a href="tafsilot.html" class="header__link">Yangiliklar</a></li>
                     <li class="header__list"><a href="" class="header__link">Kontaklar</a></li>
                 </ul>
                 <div class="select__lg">Uz</div>
@@ -26,8 +26,8 @@
         <section class="hero">
             <div class="container">
                 <div class="hero__wrapper">
-                    <h2 class="hero__title">Xizmatimiz tafsilotlari</h2>
-                <p class="hero__text">Bosh sahifa > Xizmatimiz tafsilotlari</p>
+                    <h2 class="hero__title2">Xizmatimiz tafsilotlari</h2>
+                <p class="hero__text2">Bosh sahifa > Xizmatimiz tafsilotlari</p>
                 </div>
             </div>
         </section>
@@ -64,7 +64,7 @@
         <section class="doctors">
             <div class="container">
                 <div class="doctors__nav">
-                    <h2 class="doctors__title"><span class="border">Biz</span>ning mutaxassislarimiz</h2>
+                    <h2 class="doctors__title"><span class="bordera">Biz</span>ning mutaxassislarimiz</h2>
                     <button class="doctors__btn">Barcha mutaxassislar</button>
                 </div>
                 <div class="doctors__info">
