--- a/tafsilot.html
+++ b/tafsilot.html
@@ -13,7 +13,7 @@
                 <img src="./img/Button.png" alt="" class="header__img">
                 <ul class="header__menu">
                     <li class="header__list"><a href="index.html" class="header__link">Biz Haqimizda</a></li>
-                    <li class="header__list"><a href="" class="header__link">Xizmatlarimiz</a></li>
+                    <li class="header__list"><a href="xizmatlar.html" class="header__link">Xizmatlarimiz</a></li>
                     <li class="header__list"><a href="" class="header__link">Shifokorlar</a></li>
                     <li class="header__list"><a href="tafsilot.html" class="header__link">Yangiliklar</a></li>
                     <li class="header__list"><a href="" class="header__link">Kontaklar</a></li>
