--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="header_2_content">
             <ul class="header_2_ul">
               <li class="li"><a class="a" href="index.html">Biz haqimizda</a></li>
-              <li class="li"><a class="a" href="">Xizmatlarimiz</a></li>
+              <li class="li"><a class="a" href="xizmatlar.html">Xizmatlarimiz</a></li>
               <li class="li"><a class="a" href="">Shifokorlar</a></li>
               <li class="li"><a class="a" href="tafsilot.html">Yangiliklar</a></li>
               <li class="li"><a class="a" href="">Kontaktlar</a></li>
