--- a/niger.html
+++ b/niger.html
@@ -53,13 +53,25 @@
             <div class="aa_content">
               <div class="itemssss">
                 <p class="kiki">Bog'lanish uchun ma'lumot</p>
-                <p class="grwy"><img class="de" src="./img/Vector.png" alt="">+ 998 (71) 249-15-90</p>
-                <p class="grwy"><img class="de" src="./img/Vector.png" alt="">medicalexp@gmail.com</p>
-                <p class="grwy"><img class="de" src="./img/Vector.png" alt="">xona</p>
+                <p class="grwy">
+                  <img class="de" src="./img/Vector.png" alt="" />+ 998 (71)
+                  249-15-90
+                </p>
+                <p class="grwy">
+                  <img
+                    class="de"
+                    src="./img/Vector.png"
+                    alt=""
+                  />medicalexp@gmail.com
+                </p>
+                <p class="grwy">
+                  <img class="de" src="./img/Vector.png" alt="" />xona
+                </p>
               </div>
               <div class="itemssss">
                 <p class="ish">Ish vaqti</p>
                 <div class="borderre"></div>
+                <p>Dushanba <span>9:00 - 20:00</span></p>
               </div>
             </div>
           </div>
