--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <section class="section_4">
         <div class="container">
           <div class="box">
-            <h2 class="h-2">Bizning shifoxona xizmatlarimiz</h2>
+            <h2 class="h-2">Nega bizni tanlaysiz</h2>
             <button class="nitter">Barcha xizmatlar</button>
           </div>
           <div class="border"></div>
@@ -224,7 +224,7 @@
       <section class="section_4">
         <div class="container">
           <div class="box">
-            <h2 class="h-2">Bizning shifoxona xizmatlarimiz</h2>
+            <h2 class="h-2">Bizning eng so'nggi bloglarimiz</h2>
             <button class="nitter">Barcha xizmatlar</button>
           </div>
           <div class="border"></div>
