--- a/xizmatlar.html
+++ b/xizmatlar.html
@@ -35,11 +35,194 @@
             <div class="container">
                 <div class="xizmatlar__wrapper">
                     <div class="xizmatlar__card">
-                        
+                        <img src="/img/a4e6287c6d61fcd07ee241ce91058cf6d43abf77.jpg" alt="" class="xizmatlar__img">
+                        <h2 class="xizmatlar__title">Ginekologiya </h2>
+                        <p class="xizmatlar__text">Expert Medical Clinic va GinekologiyaExpert Medical
+                            Clinic - bu ayol tanasining salomatligi va farovonligi
+                            uchun sizning ishonchli yechimingiz. Ko'p yillik
+                            tajribaga va ambitsiyali yondashuvga ega bo…</p>
+                    </div>
+                    <div class="xizmatlar__card">
+                        <img src="/img//204a8eab318bb87a85776d8f28f3808930d31cc5 (1).png" alt="" class="xizmatlar__img">
+                        <h2 class="xizmatlar__title">Ginekologiya </h2>
+                        <p class="xizmatlar__text">Expert Medical Clinic va GinekologiyaExpert Medical
+                            Clinic - bu ayol tanasining salomatligi va farovonligi
+                            uchun sizning ishonchli yechimingiz. Ko'p yillik
+                            tajribaga va ambitsiyali yondashuvga ega bo…</p>
+                    </div>
+                    <div class="xizmatlar__card">
+                        <img src="/img//918f14c97e1ee9e1b512a2ff6b9527046e163f8a.png" alt="" class="xizmatlar__img">
+                        <h2 class="xizmatlar__title">Ginekologiya </h2>
+                        <p class="xizmatlar__text">Expert Medical Clinic va GinekologiyaExpert Medical
+                            Clinic - bu ayol tanasining salomatligi va farovonligi
+                            uchun sizning ishonchli yechimingiz. Ko'p yillik
+                            tajribaga va ambitsiyali yondashuvga ega bo…</p>
+                    </div>
+                    <div class="xizmatlar__card">
+                        <img src="/img/07ae0225324a5e2fdcd0c845e4374a479f76f552.jpg" alt="" class="xizmatlar__img">
+                        <h2 class="xizmatlar__title">Ginekologiya </h2>
+                        <p class="xizmatlar__text">Expert Medical Clinic va GinekologiyaExpert Medical
+                            Clinic - bu ayol tanasining salomatligi va farovonligi
+                            uchun sizning ishonchli yechimingiz. Ko'p yillik
+                            tajribaga va ambitsiyali yondashuvga ega bo…</p>
+                    </div>
+                    <div class="xizmatlar__card">
+                        <img src="/img/24de31e11a939ac3744bf5a4bd8a9d5ce96b17f5.png" alt="" class="xizmatlar__img">
+                        <h2 class="xizmatlar__title">Ginekologiya </h2>
+                        <p class="xizmatlar__text">Expert Medical Clinic va GinekologiyaExpert Medical
+                            Clinic - bu ayol tanasining salomatligi va farovonligi
+                            uchun sizning ishonchli yechimingiz. Ko'p yillik
+                            tajribaga va ambitsiyali yondashuvga ega bo…</p>
+                    </div>
+                    <div class="xizmatlar__card">
+                        <img src="/img/8205c6173ed2486512258fdc562f1c24612d6b82 (1).png" alt="" class="xizmatlar__img">
+                        <h2 class="xizmatlar__title">Ginekologiya </h2>
+                        <p class="xizmatlar__text">Expert Medical Clinic va GinekologiyaExpert Medical
+                            Clinic - bu ayol tanasining salomatligi va farovonligi
+                            uchun sizning ishonchli yechimingiz. Ko'p yillik
+                            tajribaga va ambitsiyali yondashuvga ega bo…</p>
+                    </div>
+                    <div class="xizmatlar__card">
+                        <img src="/img/c3e11b2ce3ee786ba178053d6f58b715a8ab839b.png" alt="" class="xizmatlar__img">
+                        <h2 class="xizmatlar__title">Ginekologiya </h2>
+                        <p class="xizmatlar__text">Expert Medical Clinic va GinekologiyaExpert Medical
+                            Clinic - bu ayol tanasining salomatligi va farovonligi
+                            uchun sizning ishonchli yechimingiz. Ko'p yillik
+                            tajribaga va ambitsiyali yondashuvga ega bo…</p>
+                    </div>
+                    <div class="xizmatlar__card">
+                        <img src="/img/418e8bcec0488f6c67c9cfd5c0d146287f533fd7.jpg" alt="" class="xizmatlar__img">
+                        <h2 class="xizmatlar__title">Ginekologiya </h2>
+                        <p class="xizmatlar__text">Expert Medical Clinic va GinekologiyaExpert Medical
+                            Clinic - bu ayol tanasining salomatligi va farovonligi
+                            uchun sizning ishonchli yechimingiz. Ko'p yillik
+                            tajribaga va ambitsiyali yondashuvga ega bo…</p>
+                    </div>
+                    <div class="xizmatlar__card">
+                        <img src="/img/f7a577a75a927c88d83ad734ed50a8854df428ca.jpg" alt="" class="xizmatlar__img">
+                        <h2 class="xizmatlar__title">Ginekologiya </h2>
+                        <p class="xizmatlar__text">Expert Medical Clinic va GinekologiyaExpert Medical
+                            Clinic - bu ayol tanasining salomatligi va farovonligi
+                            uchun sizning ishonchli yechimingiz. Ko'p yillik
+                            tajribaga va ambitsiyali yondashuvga ega bo…</p>
+                    </div>
+                    <div class="xizmatlar__card">
+                        <img src="/img/c463a201d5fc0afd1781fe9a184ff8e06664032b.png" alt="" class="xizmatlar__img">
+                        <h2 class="xizmatlar__title">Ginekologiya </h2>
+                        <p class="xizmatlar__text">Expert Medical Clinic va GinekologiyaExpert Medical
+                            Clinic - bu ayol tanasining salomatligi va farovonligi
+                            uchun sizning ishonchli yechimingiz. Ko'p yillik
+                            tajribaga va ambitsiyali yondashuvga ega bo…</p>
+                    </div>
+                    <div class="xizmatlar__card">
+                        <img src="/img/a4e6287c6d61fcd07ee241ce91058cf6d43abf77.jpg" alt="" class="xizmatlar__img">
+                        <h2 class="xizmatlar__title">Ginekologiya </h2>
+                        <p class="xizmatlar__text">Expert Medical Clinic va GinekologiyaExpert Medical
+                            Clinic - bu ayol tanasining salomatligi va farovonligi
+                            uchun sizning ishonchli yechimingiz. Ko'p yillik
+                            tajribaga va ambitsiyali yondashuvga ega bo…</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="doctors">
+            <div class="container">
+                <div class="doctors__nav">
+                    <h2 class="doctors__title"><span class="bordera">Biz</span>ning mutaxassislarimiz</h2>
+                    <button class="doctors__btn">Barcha mutaxassislar</button>
+                </div>
+                <div class="doctors__info">
+                    <div class="doctor__card">
+                        <img src="./img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img">
+                        <h2 class="doctor__name">Ortiqov Aziz <br>
+                            Farixdjanovich</h2>
+                            <p class="doctor__kind">Дерматология</p>
+                    </div>
+                    <div class="doctor__card">
+                        <img src="./img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img">
+                        <h2 class="doctor__name">Ortiqov Aziz <br>
+                            Farixdjanovich</h2>
+                            <p class="doctor__kind">Дерматология</p>
+                    </div>
+                    <div class="doctor__card">
+                        <img src="./img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img">
+                        <h2 class="doctor__name">Ortiqov Aziz <br>
+                            Farixdjanovich</h2>
+                            <p class="doctor__kind">Дерматология</p>
+                    </div>
+                    <div class="doctor__card">
+                        <img src="./img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img">
+                        <h2 class="doctor__name">Ortiqov Aziz <br>
+                            Farixdjanovich</h2>
+                            <p class="doctor__kind">Дерматология</p>
+                    </div>
+                    <div class="doctor__card">
+                        <img src="./img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img">
+                        <h2 class="doctor__name">Ortiqov Aziz <br>
+                            Farixdjanovich</h2>
+                            <p class="doctor__kind">Дерматология</p>
+                    </div>
+                    <div class="doctor__card">
+                        <img src="./img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img">
+                        <h2 class="doctor__name">Ortiqov Aziz <br>
+                            Farixdjanovich</h2>
+                            <p class="doctor__kind">Дерматология</p>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+          <ul class="footer__ul">
+            <li class="footer__li">
+              <p class="bold">Kontaktlar</p>
+              <ul class="footer__menu">
+                <li class="footer__list">
+                  <img src="./img/Vector.png" alt="" class="mail" />
+                  <p class="mail__text">medicalexp@gmail.com</p>
+                </li>
+                <li class="footer__list">
+                  <img src="./img/Ale.png" alt="" class="ale" />
+                  <p class="mail__text">+ 998 (71) 249-15-90</p>
+                </li>
+                <li class="footer__list">
+                  <img src="./img/location.png" alt="" class="location" />
+                  <p class="mail__text">
+                    Toshkent sh, Shayxontour tumani, Beruniy <br />
+                    shoh ko‘chasi, 32-uy
+                  </p>
+                </li>
+              </ul>
+            </li>
+            <li class="footer__li">
+              <p class="bold">Biz Haqimizda</p>
+              <ul class="footer__menu">
+                <li class="footer__list">Shifokorlar</li>
+                <li class="footer__list">Xizmatlarimiz</li>
+                <li class="footer__list">Yangiliklar</li>
+                <li class="footer__list">Maxfiylik siyosati</li>
+              </ul>
+            </li>
+            <li class="footer__li">
+              <p class="bold">Bemorlar Uchun</p>
+              <ul class="footer__menu">
+                <li class="footer__list">Uchrashuvni tayinlash uchun</li>
+                <li class="footer__list">Yuklab olish katalogi</li>
+              </ul>
+            </li>
+            <li class="footer__li">
+              <p class="bold">Bemorlar Uchun</p>
+              <ul class="footer__menu">
+                <li class="footer__list__input">F.I.O</li>
+                <li class="footer__list__input">Telfon raqamlarimiz</li>
+                <li class="footer__list__input xabar">Xabar</li>
+                <button class="footer__btn">Yuborish</button>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </footer>
 </body>
 </html>
