--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
           </div>
           <div class="header_2_content">
             <ul class="header_2_ul">
-              <li class="li"><a class="a" href="index.html">Biz haqimizda</a></li>
-              <li class="li"><a class="a" href="xizmatlar.html">Xizmatlarimiz</a></li>
+              <li class="li">
+                <a class="a" href="index.html">Biz haqimizda</a>
+              </li>
+              <li class="li">
+                <a class="a" href="xizmatlar.html">Xizmatlarimiz</a>
+              </li>
               <li class="li"><a class="a" href="">Shifokorlar</a></li>
               <li class="li">
                 <a class="a" href="tafsilot.html">Yangiliklar</a>
@@ -169,7 +173,7 @@
           </div>
         </div>
       </section>
-     
+
       <section class="section_4">
         <div class="container">
           <div class="box">
