--- a/niger.html
+++ b/niger.html
@@ -38,7 +38,6 @@
           <div class="cpla_wrapper">
             <div class="cpla_content">
               <p class="whitw">Muslimov Ulug'bek Yakubjanovich</p>
-
               <p class="c">Bosh sahifa > Shifokorlar</p>
             </div>
           </div>
@@ -46,37 +45,183 @@
       </section>
       <section class="aa">
         <div class="container">
-          <div class="aa_wrapper">
-            <div class="aa_content">
-              <img src="./img/div.css-kgnb9r.png" alt="" />
-            </div>
-            <div class="aa_content">
-              <div class="itemssss">
-                <p class="kiki">Bog'lanish uchun ma'lumot</p>
-                <p class="grwy">
-                  <img class="de" src="./img/Vector.png" alt="" />+ 998 (71)
-                  249-15-90
-                </p>
-                <p class="grwy">
-                  <img
-                    class="de"
-                    src="./img/Vector.png"
-                    alt=""
-                  />medicalexp@gmail.com
-                </p>
-                <p class="grwy">
-                  <img class="de" src="./img/Vector.png" alt="" />xona
-                </p>
+          <div class="boxxx">
+            <div class="aa_wrapper">
+              <div class="aa_content">
+                <img src="./img/div.css-kgnb9r.png" alt="" />
               </div>
-              <div class="itemssss">
-                <p class="ish">Ish vaqti</p>
-                <div class="borderre"></div>
-                <p>Dushanba <span>9:00 - 20:00</span></p>
+              <div class="aa_content">
+                <div class="itemssss">
+                  <p class="kiki">Bog'lanish uchun ma'lumot</p>
+                  <p class="grwy">
+                    <img class="de" src="./img/Vector.png" alt="" />+ 998 (71)
+                    249-15-90
+                  </p>
+                  <p class="grwy">
+                    <img
+                      class="de"
+                      src="./img/Vector.png"
+                      alt=""
+                    />medicalexp@gmail.com
+                  </p>
+                  <p class="grwy">
+                    <img class="de" src="./img/Vector.png" alt="" />xona
+                  </p>
+                </div>
+                <div class="itemssss">
+                  <p class="ish">Ish vaqti</p>
+                </div>
+                <div class="itemssss dedd">
+                  <div class="itemitem">
+                    <div class="borderre"></div>
+                    <p>Dushanba <span class="nigetta">9:00 - 20:00</span></p>
+                  </div>
+                  <div class="itemitem">
+                    <div class="borderre"></div>
+                    <p>Dushanba <span class="nigetta">9:00 - 20:00</span></p>
+                  </div>
+                  <div class="itemitem">
+                    <div class="borderre"></div>
+                    <p>Dushanba <span class="nigetta">9:00 - 20:00</span></p>
+                  </div>
+                  <div class="itemitem">
+                    <div class="borderre"></div>
+                    <p>Dushanba <span class="nigetta">9:00 - 20:00</span></p>
+                  </div>
+                  <div class="itemitem">
+                    <div class="borderre"></div>
+                    <p>Dushanba <span class="nigetta">9:00 - 20:00</span></p>
+                  </div>
+                  <div class="itemitem">
+                    <div class="borderre"></div>
+                    <p>Dushanba <span class="nigetta">9:00 - 20:00</span></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="gg_wrapper">
+              <div class="gg_content">
+                <p class="gild">Muslimov Ulug'bek Yakubjanovich Biografiya</p>
+                <p class="niniga">
+                  Muslimov Ulug'bek Yakubjanovich sahifasiga xush kelibsiz
+                </p>
+                <p class="grt">
+                  Muslimov Ulug‘bek Yakubjanovich – yuqori malakali va katta
+                  tajribaga ega plastik jarroh. 2007 yilda Toshkent davlat
+                  tibbiyot institutini tamomlab, plastik jarrohlik yo‘nalishi
+                  bo‘yicha magistrlik darajasini olgan.   Mutaxassisimiz doimiy
+                  ravishda o'z malakasini oshirib boradi masalan, 2022 yilda
+                  Istanbulda malaka oshirish kurslarini tamomlagan va u yerda
+                  plastik jarrohlik sohasidagi eng yangi uslub va
+                  texnologiyalarni o'rgangan.   Shifokoromiz nafaqat yuqori
+                  malakali, balki o‘z bemorlariga e’tibor va g‘amxo‘rlik
+                  ko‘rsatadi. U har doim ularning istaklarini tinglashga va
+                  ularni amalga oshirishga harat qiladi. Shuningdek u
+                  protseduralar bilan bog'liq barcha savollarga javob berishga
+                  tayyor
+                </p>
+
+                <p class="niniga">Plastik jarrohlik</p>
+                <p class="grt">
+                  Bemorlar bilan maslahatlashish, tashxis qo'yish, davolash
+                  rejasini tuzish, xavf yuzaga kelishi mumkin bo'lgan
+                  oqibatlarni baholash, jarrohlik operatsiyalarini bajarish,
+                  favqulodda vaziyatlarda harakatlar algoritmini samarali va tez
+                  qo'llash, yumshoq to'qimalarga kosmetik tikuvlarni
+                  ehtiyotkorlik bilan qo'llash, jarrohlik yaralarini birlamchi
+                  va ikkilamchi davolash
+                </p>
+                <p class="gildd">Ta'lim</p>
+                <p class="grttt">
+                  2-Toshkent Davlat Tibbiyot Instituti (TMA) 2000-2007
+                  Mutaxassislik Magistratura: 2-Toshkent Davlat Tibbiyot
+                  Instituti (TMA) 2008-2011 y. Maksillofasiyal jarrohlik,
+                  Plastik jarrohlik Mutaxassisligi bo'yicha toifalar Oliy
+                  toifali shifokor
+                </p>
+                <p class="gildd">Tajriba</p>
+                <p class="grtt">23 yil</p>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <section class="yy">
+        <div class="container dededed">
+          <div class="yy_wrapper">
+            <div class="yy_content">
+              <li class="footer__li">
+                <p class="bol">Bemorlar Uchun</p>
+                <ul class="footer__men">
+                  <li class="footer__list__inpu">
+                    <img class="jiji" src="./img/SVG.png" alt="" />F.I.O
+                  </li>
+                  <div class="borderre"></div>
+                  <li class="footer__list__inpu">
+                    <img class="jiji" src="./img/Vector.png" alt="" />Telfon
+                    raqamlarimiz
+                  </li>
+                  <div class="borderre"></div>
+                  <li class="footer__list__inpu">Genikologia</li>
+                  <div class="borderre"></div>
+                  <button class="footer__bt">Yuborish</button>
+                </ul>
+              </li>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer class="footer">
+        <div class="container">
+          <ul class="footer__ul">
+            <li class="footer__li">
+              <p class="bold">Kontaktlar</p>
+              <ul class="footer__menu">
+                <li class="footer__list">
+                  <img src="./img/Vector.png" alt="" class="mail" />
+                  <p class="mail__text">medicalexp@gmail.com</p>
+                </li>
+                <li class="footer__list">
+                  <img src="./img/Ale.png" alt="" class="ale" />
+                  <p class="mail__text">+ 998 (71) 249-15-90</p>
+                </li>
+                <li class="footer__list">
+                  <img src="./img/location.png" alt="" class="location" />
+                  <p class="mail__text">
+                    Toshkent sh, Shayxontour tumani, Beruniy <br />
+                    shoh ko‘chasi, 32-uy
+                  </p>
+                </li>
+              </ul>
+            </li>
+            <li class="footer__li">
+              <p class="bold">Biz Haqimizda</p>
+              <ul class="footer__menu">
+                <li class="footer__list">Shifokorlar</li>
+                <li class="footer__list">Xizmatlarimiz</li>
+                <li class="footer__list">Yangiliklar</li>
+                <li class="footer__list">Maxfiylik siyosati</li>
+              </ul>
+            </li>
+            <li class="footer__li">
+              <p class="bold">Bemorlar Uchun</p>
+              <ul class="footer__menu">
+                <li class="footer__list">Uchrashuvni tayinlash uchun</li>
+                <li class="footer__list">Yuklab olish katalogi</li>
+              </ul>
+            </li>
+            <li class="footer__li">
+              <p class="bold">Bemorlar Uchun</p>
+              <ul class="footer__menu">
+                <li class="footer__list__input">F.I.O</li>
+                <li class="footer__list__input">Telfon raqamlarimiz</li>
+                <li class="footer__list__input xabar">Xabar</li>
+                <button class="footer__btn">Yuborish</button>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
