new image and decor add

--- a/tafsilot.html
+++ b/tafsilot.html
@@ -86,25 +86,25 @@
                             <p class="doctor__kind">Дерматология</p>
                     </div>
                     <div class="doctor__card">
-                        <img src="./img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img">
+                        <img src="./img/45cce0977909d043290b859b84be7351b7335ba4.jpg" alt="" class="doctor__img">
                         <h2 class="doctor__name">Ortiqov Aziz <br>
                             Farixdjanovich</h2>
                             <p class="doctor__kind">Дерматология</p>
                     </div>
                     <div class="doctor__card">
-                        <img src="./img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img">
+                        <img src="./img/0a4403b3d671dccee6e12748c900f6d3a17fb5f6.png" alt="" class="doctor__img">
                         <h2 class="doctor__name">Ortiqov Aziz <br>
                             Farixdjanovich</h2>
                             <p class="doctor__kind">Дерматология</p>
                     </div>
                     <div class="doctor__card">
-                        <img src="./img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img">
+                        <img src="./img/6e877a517d18d7b1babb27a560c2669d7e003a3a.png" alt="" class="doctor__img">
                         <h2 class="doctor__name">Ortiqov Aziz <br>
                             Farixdjanovich</h2>
                             <p class="doctor__kind">Дерматология</p>
                     </div>
                     <div class="doctor__card">
-                        <img src="./img/bc6a8a952e524e35c6a57ec41ac92ecda7acda8f.png" alt="" class="doctor__img">
+                        <img src="./img/9d6804c154e0c405f60c3e1a567d079b12ec4421.png" alt="" class="doctor__img">
                         <h2 class="doctor__name">Ortiqov Aziz <br>
                             Farixdjanovich</h2>
                             <p class="doctor__kind">Дерматология</p>
