--- a/index.html
+++ b/index.html
@@ -124,6 +124,36 @@
                 keng k…
               </p>
             </div>
+            <div class="section_content">
+              <img src="./img/div.css-n6nkkh.png" alt="" />
+              <p class="with-1">Plastik jarrohlik</p>
+              <p class="with">
+                Expert Medical klinikasida plastik jarrohlik Xususiy klinikamiz
+                jarrohlik va plastik jarrohlik sohasida katta yillik tajribaga
+                ega. Biz rinoplastika, liposaktsiya, yuz va tanani liftingi kabi
+                keng k…
+              </p>
+            </div>
+            <div class="section_content">
+              <img src="./img/div.css-n6nkkh.png" alt="" />
+              <p class="with-1">Plastik jarrohlik</p>
+              <p class="with">
+                Expert Medical klinikasida plastik jarrohlik Xususiy klinikamiz
+                jarrohlik va plastik jarrohlik sohasida katta yillik tajribaga
+                ega. Biz rinoplastika, liposaktsiya, yuz va tanani liftingi kabi
+                keng k…
+              </p>
+            </div>
+            <div class="section_content">
+              <img src="./img/div.css-n6nkkh.png" alt="" />
+              <p class="with-1">Plastik jarrohlik</p>
+              <p class="with">
+                Expert Medical klinikasida plastik jarrohlik Xususiy klinikamiz
+                jarrohlik va plastik jarrohlik sohasida katta yillik tajribaga
+                ega. Biz rinoplastika, liposaktsiya, yuz va tanani liftingi kabi
+                keng k…
+              </p>
+            </div>
           </div>
         </div>
       </section>
@@ -137,7 +167,11 @@
               </p>
             </div>
             <div class="section-2_content">
-              <img src="./img/Section → poster.fd8ce605.jpg.png" alt="" />
+              <img
+                class="okkk"
+                src="./img/Section → poster.fd8ce605.jpg.png"
+                alt=""
+              />
             </div>
           </div>
         </div>
@@ -337,5 +371,6 @@
         </div>
       </footer>
     </main>
+    <script src="./Js/app.js"></script>
   </body>
 </html>
