--- a/xizmatlar.html
+++ b/xizmatlar.html
@@ -1,45 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./Css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./Css/style.css" />
+  </head>
+  <body>
     <header class="header">
-        <div class="container">
-            <div class="header__wrapper">
-                <img src="./img/Button.png" alt="" class="header__img">
-                <ul class="header__menu">
-                    <li class="header__list"><a href="index.html" class="header__link">Biz Haqimizda</a></li>
-                    <li class="header__list"><a href="" class="header__link">Xizmatlarimiz</a></li>
-                    <li class="header__list"><a href="xizmatlar.html" class="header__link">Shifokorlar</a></li>
-                    <li class="header__list"><a href="tafsilot.html" class="header__link">Yangiliklar</a></li>
-                    <li class="header__list"><a href="" class="header__link">Kontaklar</a></li>
-                </ul>
-                <div class="select__lg">Uz</div>
-            </div>
+      <div class="container">
+        <div class="header__wrapper">
+          <img src="./img/Button.png" alt="" class="header__img" />
+          <ul class="header__menu">
+            <li class="header__list">
+              <a href="index.html" class="header__link">Biz Haqimizda</a>
+            </li>
+            <li class="header__list">
+              <a href="" class="header__link">Xizmatlarimiz</a>
+            </li>
+            <li class="header__list">
+              <a href="xizmatlar.html" class="header__link">Shifokorlar</a>
+            </li>
+            <li class="header__list">
+              <a href="tafsilot.html" class="header__link">Yangiliklar</a>
+            </li>
+            <li class="header__list">
+              <a href="" class="header__link">Kontaklar</a>
+            </li>
+          </ul>
+          <div class="select__lg">Uz</div>
         </div>
+      </div>
     </header>
     <main>
-        <section class="hero">
-            <div class="container">
-                <div class="hero__wrapper">
-                    <h2 class="hero__title2">Xizmatimiz</h2>
-                <p class="hero__text2">Bosh sahifa > Xizmatimiz</p>
-                </div>
-            </div>
-        </section>
-        <section class="xizmatlar">
-            <div class="container">
-                <div class="xizmatlar__wrapper">
-                    <div class="xizmatlar__card">
-                        
-                    </div>
-                </div>
-            </div>
-        </section>
+      <section class="hero">
+        <div class="container">
+          <div class="hero__wrapper">
+            <h2 class="hero__title2">Xizmatimiz</h2>
+            <p class="hero__text2">Bosh sahifa > Xizmatimiz</p>
+          </div>
+        </div>
+      </section>
+      <section class="xizmatlar">
+        <div class="container">
+          <div class="xizmatlar__wrapper">
+            <div class="xizmatlar__card"></div>
+          </div>
+        </div>
+      </section>
     </main>
-</body>
+  </body>
 </html>
