--- a/niger.html
+++ b/niger.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./Css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header class="header_2">
@@ -48,7 +54,7 @@
           <div class="boxxx">
             <div class="aa_wrapper">
               <div class="aa_content">
-                <img src="./img/div.css-kgnb9r.png" alt="" />
+                <img class="fedya" src="./img/div.css-kgnb9r.png" alt="" />
               </div>
               <div class="aa_content">
                 <div class="itemssss">
@@ -149,24 +155,21 @@
       <section class="yy">
         <div class="container dededed">
           <div class="yy_wrapper">
-            <div class="yy_content">
-              <li class="footer__li">
-                <p class="bol">Bemorlar Uchun</p>
-                <ul class="footer__men">
-                  <li class="footer__list__inpu">
-                    <img class="jiji" src="./img/SVG.png" alt="" />F.I.O
-                  </li>
-                  <div class="borderre"></div>
-                  <li class="footer__list__inpu">
-                    <img class="jiji" src="./img/Vector.png" alt="" />Telfon
-                    raqamlarimiz
-                  </li>
-                  <div class="borderre"></div>
-                  <li class="footer__list__inpu">Genikologia</li>
-                  <div class="borderre"></div>
-                  <button class="footer__bt">Yuborish</button>
-                </ul>
-              </li>
+            <div class="form-group">
+              <div class="icon-input">
+                <img src="./img/Vector.png" alt="user icon" />
+                <input type="text" placeholder="F.I.O." />
+              </div>
+              <div class="icon-input">
+                <img src="./img/Vector.png" alt="phone icon" />
+                <input type="text" placeholder="Telefon raqamingiz" />
+              </div>
+              <div class="service-select">
+                <label>Yo'nalishlar / Xizmatlar</label>
+                <div class="icon-input">
+                  <input type="text" placeholder="lavozi" />
+                </div>
+              </div>
             </div>
           </div>
         </div>
