--- a/tafsilot.html
+++ b/tafsilot.html
@@ -48,6 +48,9 @@
         <section class="plastik">
             <div class="container">
               <div class="plastik__wrap">
+               <div class="selsi">
+                <p>buni sigma</p>
+               </div>
                 <!-- <img src="../img/8205c6173ed2486512258fdc562f1c24612d6b82.png" alt="" class="plastik__img">
                 <div class="plastik__info">
                     <h2 class="plastik__title">Plastik jarrohlik</h2>
