--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Expert proffesional clinic</title>
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+  <link rel="icon" href="./img/ChatGPT Image 26 мая 2025 г., 17_08_59.png" type="image/png">
   </head>
   <body>
     <header class="header_2">
@@ -185,11 +186,7 @@
               </p>
             </div>
             <div class="section-2_content">
-              <img
-                class="okkk"
-                src="/img/Section → poster.fd8ce605.jpg.png"
-                alt=""
-              />
+             <iframe width="628" height="353" src="https://www.youtube.com/embed/BGnZaxl0Ppo" title="Expert Medical Clinic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
           </div>
         </div>
