--- a/tafsilot.html
+++ b/tafsilot.html
@@ -48,8 +48,10 @@
         <section class="plastik">
             <div class="container">
               <div class="plastik__wrap">
-               <div class="selsi">
-                <p>buni sigma</p>
+               <div class="carusel">
+                <button class="old"><i class="bi bi-arrow-left"></i></button>
+               <a href="./tafsilot.html?id=1" class="idd"><img src="images/1.png" alt="" class="plastik__img"></a>
+               <button class="next"><i class="bi bi-arrow-right"></i></button>
                </div>
                 <!-- <img src="../img/8205c6173ed2486512258fdc562f1c24612d6b82.png" alt="" class="plastik__img">
                 <div class="plastik__info">
