--- a/index.html
+++ b/index.html
@@ -389,6 +389,9 @@
               <p class="bold">Bemorlar Uchun</p>
               <ul class="footer__menu">
                 <li class="footer__list"><input type="text" name="" id="" class="footer__inp" placeholder="F.I.O"></li>
+                <li class="footer__list"><input type="text" name="" id="" class="footer__inp" placeholder="Telefon raqamingiz"></li>
+                <li class="footer__list"><input type="text" name="" id="" class="footer__inp xab" placeholder="Xabar"></li>
+                <button class="footer__btn">Yuborish</button>
               </ul>
             </li>
           </ul>
