--- a/tafsilot.html
+++ b/tafsilot.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <title>Expert proffesional clinic</title>
+   <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+  <link rel="icon" href="./img/ChatGPT Image 26 мая 2025 г., 17_08_59.png" type="image/png">
   </head>
   <body>
     <header class="header_2">
