fixed small details

--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
         <div class="container">
           <div class="box">
             <h2 class="h-2">Bizning eng so'nggi bloglarimiz</h2>
-            <button class="nitter">Barcha xizmatlar</button>
+            <button class="nitter">Barcha bloglar</button>
           </div>
           <div class="border"></div>
           <div class="section_5_wrapper">
             <div class="section_5_content">
-              <img src="/img/image.png" alt="" />
+              <img src="/img/69aed961736a6383db4118e5203c09d83fc244fb.jpg" alt="" class="new__img"/>
               <p class="huhuhu">Как остановить облысение?</p>
               <p class="ninini">
                 Вас беспокоит выпадение и облысение? Это распространенная
@@ -305,31 +305,45 @@
               <p>2024-03-27 05:35:54</p>
             </div>
             <div class="section_5_content">
-              <img src="/img/image.png" alt="" />
-              <p class="huhuhu">Как остановить облысение?</p>
+              <img src="/img/f8512a44e7f58d3a111631ce210708229faa34b6.png" alt="" class="new__img"/>
+              <p class="huhuhu">Поздравляем с праздником
+                Навруз!</p>
               <p class="ninini">
-                Вас беспокоит выпадение и облысение? Это распространенная
-                проблема, с которой сталкиваются многие люди. Знаете ли вы, что
-                существуют естественные спо…
+                Поздравляем вас с вессеним праздником Навруз который был 21 марта 2025 года желаем вам провести эти ...
               </p>
               <div class="border2"></div>
               <img src="" alt="" />
               <p>2024-03-27 05:35:54</p>
             </div>
             <div class="section_5_content">
-              <img src="/img/image.png" alt="" />
-              <p class="huhuhu">Как остановить облысение?</p>
+              <img src="/img/dfd3d7bf63fa89aedd81064a2575ce09014be5bc.jpg" alt="" class="new__img"/>
+              <p class="huhuhu">TikTok и его влияние хирургию </p>
               <p class="ninini">
-                Вас беспокоит выпадение и облысение? Это распространенная
-                проблема, с которой сталкиваются многие люди. Знаете ли вы, что
-                существуют естественные спо…
+                В современную цифровую эпоху
+распространенность социальных медиа
+неоспорима. От становления легким
+способом поддерживать связь ...
               </p>
               <div class="border2"></div>
               <img src="" alt="" />
               <p>2024-03-27 05:35:54</p>
             </div>
             <div class="section_5_content">
-              <img src="/img/image.png" alt="" />
+              <img src="/img/8acc230783a8bc03660b0571b07e6b1b11b8c4a3.png" alt="" class="new__img"/>
+              <p class="huhuhu">Новшества в пластической
+                хирургии</p>
+              <p class="ninini">
+                В 2024 году тренды пластической хирургии
+отражают изменения в общественных
+представлениях о красоте.
+              </p>
+              <div class="border2"></div>
+              <img src="" alt="" />
+              <p>2024-03-27 05:35:54</p>
+         
+            </div>
+            <div class="section_5_content">
+              <img src="/img/69aed961736a6383db4118e5203c09d83fc244fb.jpg" alt="" class="new__img"/>
               <p class="huhuhu">Как остановить облысение?</p>
               <p class="ninini">
                 Вас беспокоит выпадение и облысение? Это распространенная
