--- a/index.html
+++ b/index.html
@@ -269,15 +269,15 @@
                 <p class="blue">Har kimga individual yondashuv</p>
               </div>
               <div class="bola">
-                <img src="/img/SVG.png" alt="" />
+                <img src="/img/lab.png" alt="" />
                 <p class="blue">Har kimga individual yondashuv</p>
               </div>
               <div class="bola">
-                <img src="/img/SVG.png" alt="" />
+                <img src="/img/fonar.png" alt="" />
                 <p class="blue">Har kimga individual yondashuv</p>
               </div>
               <div class="bola">
-                <img src="/img/SVG.png" alt="" />
+                <img src="/img/nagr.png" alt="" />
                 <p class="blue">Har kimga individual yondashuv</p>
               </div>
             </div>
