--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               </p>
             </div>
             <div class="section-2_content">
-             <iframe width="628" height="353" src="https://www.youtube.com/embed/BGnZaxl0Ppo" title="Expert Medical Clinic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+             <iframe width="628" height="353" src="https://www.youtube.com/embed/BGnZaxl0Ppo" title="Expert Medical Clinic" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="ind__video"></iframe>
             </div>
           </div>
         </div>
